# ComfyUI-FlashPortrait

./: .gitignore  README.md  bin_convert_pt.py  infer.py  nodes.py  pyproject.toml  requirements.txt  train_portrait.py
examples/: flash_portraits_example.json
wan/data/: portrait_data.py
wan/models/: attention_utils.py  face_align.py  face_model.py  pdf.py  portrait_encoder.py
wan/pipeline/: pipeline_wan_long.py
