[project]
name = "ComfyUI-FlashPortrait"
description = "ComfyUI nodes for FlashPortrait that enable infinite-length portrait animation generation driven by video with automatic model downloading and flexible input options."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["torch>=2.4.0", "torchvision>=0.19.0", "opencv-python>=4.9.0.80", "diffusers>=0.31.0", "transformers>=4.49.0", "tokenizers>=0.20.3", "accelerate>=1.1.1", "tqdm", "imageio[ffmpeg]", "easydict", "ftfy", "dashscope", "imageio-ffmpeg", "numpy>=1.23.5,<2", "deepspeed", "omegaconf", "datasets", "onnx", "onnxruntime-gpu", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/okdalto/ComfyUI-FlashPortrait"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/okdalto/ComfyUI-FlashPortrait/wiki"
"Bug Tracker" = "https://github.com/okdalto/ComfyUI-FlashPortrait/issues"

[tool.comfy]
PublisherId = "seonghyeon"
DisplayName = "ComfyUI-FlashPortrait"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

